src/css/Help.css
.help-background-screen {
  background: rgba(0,0,0,0.4);
  height: 100vh;
  left: 0;
  position: fixed;
  top: 0;
  width: 100vw;
}

.help-container {
  animation: help-container 1s;
  background: #ccffff;
  border: solid black 2px;
  border-radius: 7px;
  color: black;
  height: 60%;
  min-height: 500px;
  min-width: 400px;
  left: 20%;
  overflow-y: auto;
  padding: 1em;
  position: fixed;
  text-align: center;
  top: 10%;
  width: 60%;
  z-index: 2;
}

.help-container button {
  background: none;
  border: solid black 2px;
  border-radius: 3px;
  cursor: pointer;
  margin: 3px;
}

@keyframes help-container {
  from {left: -100%;}
  to {left: 20%;}
}

